add program executable incl. script and update readme.